syntax = "proto3";


import "google/protobuf/timestamp.proto";

package ticket.v1;
option go_package = "ticket/proto/ticket/v1";

service TicketService {
  rpc CreateTicket (CreateTicketRequest) returns (CreateTicketResponse);
  rpc ListTickets (ListTicketsRequest) returns (ListTicketsResponse);
  rpc UpdateTicket (UpdateTicketRequest) returns (ListTicketsResponse);
  rpc DeleteTicket (DeleteTicketRequest) returns (DeleteTicketResponse);
}

message Ticket {
  string id = 1;
  string owner_id = 2;
  string name_short = 3;
  string name_ext = 4;
  string description = 5;
  int32 amount = 6;
  double price = 7;
  int32 currency = 8;
  string priority = 10;
  bool published = 11;
  bool active = 12;
  google.protobuf.Timestamp created_at = 13;
  google.protobuf.Timestamp updated_at = 14;
  bool deleted = 15;
}

message CreateTicketRequest {
  string owner_id = 1;
  string name_short = 2;
  string name_ext = 3;
  string description = 4;
  int32 amount = 5;
  double price = 6;
  int32 currency = 7;
  string priority = 8;
  bool published = 9;
}

message CreateTicketResponse{
  Ticket ticket = 1;
}

message ListTicketsRequest {
  string id = 1;
  uint32 page_size = 2;
  string page_token = 3;
  bool reverse = 4;
}

message ListTicketsResponse {
  repeated Ticket tickets = 1;
  string next_page_token = 2;
}

message UpdateTicketRequest{
  Ticket ticket = 1;
}

message DeleteTicketRequest{
  string id = 1;
}

message DeleteTicketResponse{}
